tests/validprograms/project/test_offset.tds
Program {
	Int main() {
		Int x = 10;
		
		x = 15;
		
		x = 10;
		
		return 0;
	}
}
