tests/invalidprograms/semantic/assignment_1.tds
Program {
	Int f(Int x) {
		return x;
	}
	
	Int main() {
		f = 0;
		return 0;
	}
}
